src/helpers.h

struct task_struct;
struct pid_namespace;
struct page;
struct file;
struct wait_queue_head;
struct poll_table_struct;
struct wait_queue_entry;
struct cred;
struct inode;
struct lock_class_key;
struct mm_struct;
struct vm_area_struct;
struct static_key;
int rust_helper_signal_pending(struct task_struct *t);
void rust_helper_poll_wait(struct file *filp, struct wait_queue_head *wait_address,
			   struct poll_table_struct *p);
void rust_helper_init_wait(struct wait_queue_entry *wq_entry);
void rust_helper___mutex_init(struct mutex *mutex, const char *name,
			      struct lock_class_key *key);
void rust_helper_mutex_lock(struct mutex *lock);
void rust_helper___spin_lock_init(spinlock_t *lock, const char *name,
				  struct lock_class_key *key);
void rust_helper_spin_lock(spinlock_t *lock);
void rust_helper_spin_unlock(spinlock_t *lock);
int rust_helper_spin_trylock(spinlock_t *lock);
refcount_t rust_helper_REFCOUNT_INIT(int n);
void rust_helper_refcount_inc(refcount_t *r);
bool rust_helper_refcount_dec_and_test(refcount_t *r);
const struct cred *rust_helper_get_cred(const struct cred *cred);
void rust_helper_put_cred(const struct cred *cred);
struct file *rust_helper_get_file(struct file *f);
loff_t rust_helper_i_size_read(const struct inode *inode);
/* Helpers copied from upstream 6.12 rust/helpers to complete the set. */
void *rust_helper_blk_mq_rq_to_pdu(struct request *rq);
void rust_helper_init_work_with_key(struct work_struct *work, work_func_t func,
				    bool onstack, const char *name,
				    struct lock_class_key *key);
struct kunit *rust_helper_kunit_get_current_test(void);
void rust_helper_mmgrab(struct mm_struct *mm);
void rust_helper_mmdrop(struct mm_struct *mm);
void rust_helper_mmget(struct mm_struct *mm);
bool rust_helper_mmget_not_zero(struct mm_struct *mm);
void rust_helper_mmap_read_lock(struct mm_struct *mm);
bool rust_helper_mmap_read_trylock(struct mm_struct *mm);
void rust_helper_mmap_read_unlock(struct mm_struct *mm);
struct vm_area_struct *rust_helper_vma_lookup(struct mm_struct *mm,
					      unsigned long addr);
void rust_helper_vma_end_read(struct vm_area_struct *vma);
void rust_helper_rb_link_node(struct rb_node *node, struct rb_node *parent,
			      struct rb_node **rb_link);
void rust_helper_security_cred_getsecid(const struct cred *c, u32 *secid);
int rust_helper_security_secid_to_secctx(u32 secid, char **secdata, u32 *seclen);
void rust_helper_security_release_secctx(char *secdata, u32 seclen);
int rust_helper_security_binder_set_context_mgr(const struct cred *mgr);
int rust_helper_security_binder_transaction(const struct cred *from,
					    const struct cred *to);
int rust_helper_security_binder_transfer_binder(const struct cred *from,
						const struct cred *to);
int rust_helper_security_binder_transfer_file(const struct cred *from,
					      const struct cred *to,
					      const struct file *file);
int rust_helper_static_key_count(struct static_key *key);