rust/src/bindings.rs


    #[link_name = "rust_helper_signal_pending"]
    pub fn signal_pending(t: *mut task_struct) -> c_int;
    #[link_name = "rust_helper_poll_wait"]
    pub fn poll_wait(filp: *mut file, wait_address: *mut wait_queue_head, p: *mut poll_table_struct);
    #[link_name = "rust_helper_init_wait"]
    pub fn init_wait(wq_entry: *mut wait_queue_entry);

    #[link_name = "rust_helper___mutex_init"]
    pub fn __mutex_init(mutex: *mut mutex, name: *const c_char, key: *mut lock_class_key);
    #[link_name = "rust_helper_mutex_lock"]
    pub fn mutex_lock(lock: *mut mutex);
    #[link_name = "rust_helper___spin_lock_init"]
    pub fn __spin_lock_init(lock: *mut spinlock_t, name: *const c_char, key: *mut lock_class_key);
    #[link_name = "rust_helper_spin_lock"]
    pub fn spin_lock(lock: *mut spinlock_t);
    #[link_name = "rust_helper_spin_unlock"]
    pub fn spin_unlock(lock: *mut spinlock_t);
    #[link_name = "rust_helper_spin_trylock"]
    pub fn spin_trylock(lock: *mut spinlock_t) -> c_int;

    #[link_name = "rust_helper_REFCOUNT_INIT"]
    pub fn REFCOUNT_INIT(n: c_int) -> refcount_t;
    #[link_name = "rust_helper_refcount_inc"]
    pub fn refcount_inc(r: *mut refcount_t);
    #[link_name = "rust_helper_refcount_dec_and_test"]
    pub fn refcount_dec_and_test(r: *mut refcount_t) -> bool;

    #[link_name = "rust_helper_get_cred"]
    pub fn get_cred(cred: *const cred) -> *const cred;
    #[link_name = "rust_helper_put_cred"]
    pub fn put_cred(cred: *const cred);
    #[link_name = "rust_helper_get_file"]
    pub fn get_file(f: *mut file) -> *mut file;
    #[link_name = "rust_helper_i_size_read"]
    pub fn i_size_read(inode: *const inode) -> loff_t;

    #[link_name = "rs__printk"]
    pub fn _printk(fmt: *const c_char, args: *const c_void, ...) -> c_int;
    #[link_name = "rs_seq_printf"]
    pub fn seq_printf(m: *mut seq_file, fmt: *const c_char, args: *const c_void) -> c_int;
    #[link_name = "rs___free_pages"]
    pub fn __free_pages(page: *mut page, order: c_uint);
    #[link_name = "rs__copy_from_user"]
    pub fn _copy_from_user(to: *mut c_void, from: *const c_void, n: c_ulong) -> c_ulong;
    #[link_name = "rs__copy_to_user"]
    pub fn _copy_to_user(to: *mut c_void, from: *const c_void, n: c_ulong) -> c_ulong;
    #[link_name = "rs_strncpy_from_user"]
    pub fn strncpy_from_user(dst: *mut c_char, src: *const c_void, count: c_long) -> c_long;
    #[link_name = "rs_memchr"]
    pub fn memchr(s: *const c_void, c: c_int, n: usize) -> *mut c_void;
    #[link_name = "rs_strlen"]
    pub fn strlen(s: *const c_char) -> usize;
    #[link_name = "rs___init_waitqueue_head"]
    pub fn __init_waitqueue_head(wq_head: *mut wait_queue_head, name: *const c_char, key: *mut lock_class_key);
    #[link_name = "rs_prepare_to_wait_exclusive"]
    pub fn prepare_to_wait_exclusive(wq_head: *mut wait_queue_head, wq_entry: *mut wait_queue_entry, state: c_int);
    #[link_name = "rs_schedule_timeout"]
    pub fn schedule_timeout(timeout: c_long) -> c_long;
    #[link_name = "rs___wake_up"]
    pub fn __wake_up(q: *mut wait_queue_head, mode: c_uint, nr_exclusive: c_int, key: *mut c_void);
    #[link_name = "rs___wake_up_sync"]
    pub fn __wake_up_sync(q: *mut wait_queue_head, mode: c_uint);
    #[link_name = "rs_finish_wait"]
    pub fn finish_wait(wq_head: *mut wait_queue_head, wq_entry: *mut wait_queue_entry);
    #[link_name = "rs_synchronize_rcu"]
    pub fn synchronize_rcu();
    #[link_name = "rs___wake_up_pollfree"]
    pub fn __wake_up_pollfree(wq_head: *mut wait_queue_head);
    #[link_name = "rs_set_user_nice"]
    pub fn set_user_nice(p: *mut task_struct, nice: c_long);
    #[link_name = "rs_sched_setscheduler_nocheck"]
    pub fn sched_setscheduler_nocheck(p: *mut task_struct, policy: c_int, param: *const sched_param) -> c_int;
    #[link_name = "rs_has_capability_noaudit"]
    pub fn has_capability_noaudit(t: *mut task_struct, cap: c_int) -> bool;
    #[link_name = "rs_task_active_pid_ns"]
    pub fn task_active_pid_ns(tsk: *mut task_struct) -> *mut pid_namespace;
    #[link_name = "rs_wake_up_process"]
    pub fn wake_up_process(tsk: *mut task_struct) -> c_int;
    #[link_name = "rs_mutex_unlock"]
    pub fn mutex_unlock(lock: *mut mutex);
    #[link_name = "rs_mutex_trylock"]
    pub fn mutex_trylock(lock: *mut mutex) -> c_int;

    #[link_name = "rs_task_pid"]
    pub fn rs_task_pid(t: *mut task_struct) -> pid_t;
    #[link_name = "rs_task_tgid"]
    pub fn rs_task_tgid(t: *mut task_struct) -> pid_t;
    #[link_name = "rs_task_group_leader"]
    pub fn rs_task_group_leader(t: *mut task_struct) -> *mut task_struct;
    #[link_name = "rs_task_mm"]
    pub fn rs_task_mm(t: *mut task_struct) -> *mut mm_struct;
    #[link_name = "rs_task_policy"]
    pub fn rs_task_policy(t: *mut task_struct) -> c_uint;
    #[link_name = "rs_task_normal_prio"]
    pub fn rs_task_normal_prio(t: *mut task_struct) -> c_int;
    #[link_name = "rs_task_cred"]
    pub fn rs_task_cred(t: *mut task_struct) -> *const cred;
    #[link_name = "rs_page_nid"]
    pub fn rs_page_nid(p: *mut page) -> c_int;

    #[link_name = "rust_helper_blk_mq_rq_to_pdu"]
    pub fn blk_mq_rq_to_pdu(rq: *mut request) -> *mut c_void;
    #[link_name = "rust_helper_init_work_with_key"]
    pub fn init_work_with_key(
        work: *mut work_struct,
        func: Option<unsafe extern "C" fn(*mut work_struct)>,
        onstack: bool,
        name: *const c_char,
        key: *mut lock_class_key,
    );
    #[link_name = "rust_helper_kunit_get_current_test"]
    pub fn kunit_get_current_test() -> *mut kunit;
    #[link_name = "rust_helper_mmgrab"]
    pub fn mmgrab(mm: *mut mm_struct);
    #[link_name = "rust_helper_mmdrop"]
    pub fn mmdrop(mm: *mut mm_struct);
    #[link_name = "rust_helper_mmget"]
    pub fn mmget(mm: *mut mm_struct);
    #[link_name = "rust_helper_mmget_not_zero"]
    pub fn mmget_not_zero(mm: *mut mm_struct) -> bool;
    #[link_name = "rust_helper_mmap_read_lock"]
    pub fn mmap_read_lock(mm: *mut mm_struct);
    #[link_name = "rust_helper_mmap_read_trylock"]
    pub fn mmap_read_trylock(mm: *mut mm_struct) -> bool;
    #[link_name = "rust_helper_mmap_read_unlock"]
    pub fn mmap_read_unlock(mm: *mut mm_struct);
    #[link_name = "rust_helper_vma_lookup"]
    pub fn vma_lookup(mm: *mut mm_struct, addr: c_ulong) -> *mut vm_area_struct;
    #[link_name = "rust_helper_vma_end_read"]
    pub fn vma_end_read(vma: *mut vm_area_struct);
    #[link_name = "rust_helper_rb_link_node"]
    pub fn rb_link_node(node: *mut rb_node, parent: *mut rb_node, rb_link: *mut *mut rb_node);
    #[link_name = "rust_helper_security_cred_getsecid"]
    pub fn security_cred_getsecid(cred: *const cred, secid: *mut u32);
    #[link_name = "rust_helper_security_secid_to_secctx"]
    pub fn security_secid_to_secctx(secid: u32, secdata: *mut *mut c_char, seclen: *mut u32) -> c_int;
    #[link_name = "rust_helper_security_release_secctx"]
    pub fn security_release_secctx(secdata: *mut c_char, seclen: u32);
    #[link_name = "rust_helper_security_binder_set_context_mgr"]
    pub fn security_binder_set_context_mgr(mgr: *const cred) -> c_int;
    #[link_name = "rust_helper_security_binder_transaction"]
    pub fn security_binder_transaction(from: *const cred, to: *const cred) -> c_int;
    #[link_name = "rust_helper_security_binder_transfer_binder"]
    pub fn security_binder_transfer_binder(from: *const cred, to: *const cred) -> c_int;
    #[link_name = "rust_helper_security_binder_transfer_file"]
    pub fn security_binder_transfer_file(from: *const cred, to: *const cred, file: *mut file) -> c_int;
    #[link_name = "rust_helper_static_key_count"]
    pub fn static_key_count(key: *mut static_key) -> c_int;

    #[link_name = "rs_mmput"]
    pub fn mmput(mm: *mut mm_struct);
    #[link_name = "rs_mmput_async"]
    pub fn mmput_async(mm: *mut mm_struct);
    #[link_name = "rs_zap_page_range_single"]
    pub fn zap_page_range_single(
        vma: *mut vm_area_struct,
        address: c_ulong,
        size: c_ulong,
        details: *mut c_void,
    );
    #[link_name = "rs_vm_insert_page"]
    pub fn vm_insert_page(vma: *mut vm_area_struct, addr: c_ulong, page: *mut page) -> c_int;
    #[link_name = "rs_get_device"]
    pub fn get_device(dev: *mut device) -> *mut device;
    #[link_name = "rs_put_device"]
    pub fn put_device(dev: *mut device);
    #[link_name = "rs_request_firmware"]
    pub fn request_firmware(fw: *mut *const firmware, name: *const c_char, dev: *mut device) -> c_int;
    #[link_name = "rs_firmware_request_nowarn"]
    pub fn firmware_request_nowarn(fw: *mut *const firmware, name: *const c_char, dev: *mut device) -> c_int;
    #[link_name = "rs_release_firmware"]
    pub fn release_firmware(fw: *mut firmware);
    #[link_name = "rs_misc_register"]
    pub fn misc_register(misc: *mut miscdevice) -> c_int;
    #[link_name = "rs_misc_deregister"]
    pub fn misc_deregister(misc: *mut miscdevice) -> c_int;
    #[link_name = "rs__copy_from_iter"]
    pub fn _copy_from_iter(to: *mut c_void, len: usize, i: *mut iov_iter) -> usize;
    #[link_name = "rs__copy_to_iter"]
    pub fn _copy_to_iter(from: *const c_void, len: usize, i: *mut iov_iter) -> usize;
    #[link_name = "rs_generic_file_open"]
    pub fn generic_file_open(inode: *mut inode, file: *mut file) -> c_int;
    #[link_name = "rs___blk_mq_alloc_disk"]
    pub fn __blk_mq_alloc_disk(
        set: *mut blk_mq_tag_set,
        lim: *mut queue_limits,
        queuedata: *mut c_void,
        lkclass: *mut lock_class_key,
    ) -> *mut gendisk;
    #[link_name = "rs_set_capacity"]
    pub fn set_capacity(disk: *mut gendisk, sectors: u64);
    #[link_name = "rs_device_add_disk"]
    pub fn device_add_disk(
        parent: *mut device,
        disk: *mut gendisk,
        groups: *const *const c_char,
    ) -> c_int;
    #[link_name = "rs_del_gendisk"]
    pub fn del_gendisk(disk: *mut gendisk);
    #[link_name = "rs_blk_mq_start_request"]
    pub fn blk_mq_start_request(rq: *mut request);
    #[link_name = "rs_blk_mq_end_request"]
    pub fn blk_mq_end_request(rq: *mut request, error: blk_status_t);
    #[link_name = "rs_blk_mq_alloc_tag_set"]
    pub fn blk_mq_alloc_tag_set(set: *mut blk_mq_tag_set) -> c_int;
    #[link_name = "rs_blk_mq_free_tag_set"]
    pub fn blk_mq_free_tag_set(set: *mut blk_mq_tag_set);
    #[link_name = "rs_errno_to_blk_status"]
    pub fn errno_to_blk_status(err: c_int) -> blk_status_t;
    #[link_name = "rs_queue_work_on"]
    pub fn queue_work_on(cpu: c_int, wq: *mut workqueue_struct, work: *mut work_struct) -> bool;
    #[link_name = "rs_rb_first"]
    pub fn rb_first(root: *const rb_root) -> *mut rb_node;
    #[link_name = "rs_rb_last"]
    pub fn rb_last(root: *const rb_root) -> *mut rb_node;
    #[link_name = "rs_rb_first_postorder"]
    pub fn rb_first_postorder(root: *const rb_root) -> *mut rb_node;
    #[link_name = "rs_rb_next_postorder"]
    pub fn rb_next_postorder(node: *mut rb_node) -> *mut rb_node;
    #[link_name = "rs_rb_prev"]
    pub fn rb_prev(node: *mut rb_node) -> *mut rb_node;
    #[link_name = "rs_rb_next"]
    pub fn rb_next(node: *mut rb_node) -> *mut rb_node;
    #[link_name = "rs_rb_erase"]
    pub fn rb_erase(node: *mut rb_node, root: *mut rb_root);
    #[link_name = "rs_rb_insert_color"]
    pub fn rb_insert_color(node: *mut rb_node, root: *mut rb_root);
    #[link_name = "rs_rb_replace_node"]
    pub fn rb_replace_node(old: *mut rb_node, new: *mut rb_node, root: *mut rb_root);
